SERVER-6340 Use TIME_UTC_ rather than TIME_UTC

This avoids a compilation failure with glibc-2.16 or any other C11 libc.
Boost made the same change for boost-1.50:
https://svn.boost.org/trac/boost/ticket/6940