src/mongo/db/repl_block.cpp
@@ -183,7 +183,7 @@ namespace mongo {
             w--; // now this is the # of slaves i need
 
             boost::xtime xt;
-            boost::xtime_get(&xt, boost::TIME_UTC);
+            boost::xtime_get(&xt, boost::TIME_UTC_);
             xt.sec += maxSecondsToWait;
             
             scoped_lock mylk(_mutex);
