src/mongo/util/queue.h
@@ -121,7 +121,7 @@ namespace mongo {
             Timer timer;
 
             boost::xtime xt;
-            boost::xtime_get(&xt, boost::TIME_UTC);
+            boost::xtime_get(&xt, boost::TIME_UTC_);
             xt.sec += maxSecondsToWait;
 
             scoped_lock l( _lock );
@@ -143,7 +143,7 @@ namespace mongo {
             Timer timer;
 
             boost::xtime xt;
-            boost::xtime_get(&xt, boost::TIME_UTC);
+            boost::xtime_get(&xt, boost::TIME_UTC_);
             xt.sec += maxSecondsToWait;
 
             scoped_lock l( _lock );
